start testing the software and added a new binary call Moonfit. This will bethe main library

--- a/Moonfit/CMakeLists.txt
+++ b/Moonfit/CMakeLists.txt
@@ -1,2 +1,6 @@
 add_subdirectory(Extreminator)
 add_subdirectory(Framework)
+
+set(target Moonfit)
+add_library(${target} STATIC moonfit.h common)
+target_link_libraries(${target} PUBLIC myCommon optimizers ESES Framework)
