--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,28 @@ project(Balthyse)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_subdirectory(googletest)
+
 add_subdirectory(Moonfit)
 
-
 add_subdirectory(Elfaki2020)
+
+
+add_subdirectory(test)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
