--- a/Moonfit/CMakeLists.txt
+++ b/Moonfit/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(Framework)
 
 set(target Moonfit)
 add_library(${target} STATIC moonfit.h common)
-target_link_libraries(${target} PUBLIC myCommon optimizers ESES Framework)
+target_link_libraries(${target} PUBLIC myCommon optimizers SRES-static Framework)
 
 
 
