--- a/Moonfit/CMakeLists.txt
+++ b/Moonfit/CMakeLists.txt
@@ -3,7 +3,13 @@ add_subdirectory(Framework)
 
 set(target Moonfit)
 add_library(${target} STATIC moonfit.h common)
-target_link_libraries(${target} PUBLIC myCommon optimizers SRES-static Framework)
+target_link_libraries(${target} PUBLIC
+        myCommon
+        optimizers
+        SRES-static
+        Framework
+        linux2win
+        )
 
 
 
