--- a/Moonfit/Extreminator/common/CMakeLists.txt
+++ b/Moonfit/Extreminator/common/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(target myCommon)
 
-add_library(${target} OBJECT myFiles myRandom myTimes)
+add_library(${target} OBJECT myFiles myRandom myTimes )
 target_include_directories(${target} PUBLIC ../../../Moonfit)
 target_compile_definitions(${target} PUBLIC WITHOUT_QT)
+target_link_libraries(${target} PUBLIC linux2win)
