fixed errors in if statements in cmake scripts. APPLE needs to have if (UNIX AND NOT APPLE) in order to work

--- a/Moonfit/CMakeLists.txt
+++ b/Moonfit/CMakeLists.txt
@@ -10,7 +10,8 @@ target_link_libraries(${target} PUBLIC
         Framework
         linux2win
         )
-if (UNIX)
+
+if (UNIX AND NOT APPLE)
     target_link_libraries(${target} PUBLIC stdc++fs)
 endif ()
 
