--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,17 @@ stages:
               cmake -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) ..
               cmake --build $(BUILD_DIR) --target install --config Release -j 12
 
-
+          - task: CopyFiles@2
+            inputs:
+              sourceFolder: '$(INSTALL_DIRECTORY)'
+              contents: '**'
+              targetFolder: '$(Build.ArtifactStagingDirectory)'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              pathToPublish: '$(Build.ArtifactStagingDirectory)'
+              artifactName: Moonfit-linux
+              Parallel: true
+              ParallelCount: 8
 
       - job: BuildMac
         timeoutInMinutes: "0"
@@ -51,6 +61,17 @@ stages:
               cmake -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) ..
               cmake --build $(BUILD_DIR) --target install --config Release -j 12
 
+          - task: CopyFiles@2
+            inputs:
+              sourceFolder: '$(INSTALL_DIRECTORY)'
+              contents: '**'
+              targetFolder: '$(Build.ArtifactStagingDirectory)'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              pathToPublish: '$(Build.ArtifactStagingDirectory)'
+              artifactName: Moonfit-mac
+              Parallel: true
+              ParallelCount: 8
 
       - job: BuildWindows
         timeoutInMinutes: "0"
@@ -73,7 +94,17 @@ stages:
               cmake -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) ..
               cmake --build $(BUILD_DIR) --target install --config Release -j 12
 
-
+          - task: CopyFiles@2
+            inputs:
+              sourceFolder: '$(INSTALL_DIRECTORY)'
+              contents: '**'
+              targetFolder: '$(Build.ArtifactStagingDirectory)'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              pathToPublish: '$(Build.ArtifactStagingDirectory)'
+              artifactName: Moonfit-windows
+              Parallel: true
+              ParallelCount: 8
 
 
 
