--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
 
           - task: CopyFiles@2
             inputs:
-              sourceFolder: '$(INSTALL_DIRECTORY)'
+              sourceFolder: '$(INSTALL_DIR)'
               contents: '**'
               targetFolder: '$(Build.ArtifactStagingDirectory)'
           - task: PublishBuildArtifacts@1
@@ -63,7 +63,7 @@ stages:
 
           - task: CopyFiles@2
             inputs:
-              sourceFolder: '$(INSTALL_DIRECTORY)'
+              sourceFolder: '$(INSTALL_DIR)'
               contents: '**'
               targetFolder: '$(Build.ArtifactStagingDirectory)'
           - task: PublishBuildArtifacts@1
@@ -96,7 +96,7 @@ stages:
 
           - task: CopyFiles@2
             inputs:
-              sourceFolder: '$(INSTALL_DIRECTORY)'
+              sourceFolder: '$(INSTALL_DIR)'
               contents: '**'
               targetFolder: '$(Build.ArtifactStagingDirectory)'
           - task: PublishBuildArtifacts@1
