--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,14 +99,17 @@ add_subdirectory(Moonfit)
 add_subdirectory(Elfaki2020)
 
 
-
-
 ############################################################################
 #       tests
 #
 add_subdirectory(googletest)
 add_subdirectory(test)
 
+option(COPY_BINARY_TO_PYTHON_DIR " when true, find the SRES binary and copy to sres python folder" off)
+
+if (COPY_BINARY_TO_PYTHON_DIR)
+    install(TARGETS SRES DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/Moonfit/Extreminator/optimizers/SRES/python)
+endif ()
 
 
 
