some progress with port to python. Commit before doing something potentially misguided

--- a/Moonfit/Extreminator/optimizers/SRES/CMakeLists.txt
+++ b/Moonfit/Extreminator/optimizers/SRES/CMakeLists.txt
@@ -21,6 +21,20 @@ install(
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
+
+set(test_target EstimateMuAndSigma)
+add_executable(${test_target} EstimateMuAndSigma.cpp)
+target_link_libraries(${test_target} PRIVATE gtest gtest_main SRES-static)
+target_include_directories(${test_target} PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")
+
+
+set(test_target EstimateMuAndSigmaModified)
+add_executable(${test_target} EstimateMuAndSigmaModified.cpp)
+target_link_libraries(${test_target} PRIVATE gtest gtest_main SRES-static)
+target_include_directories(${test_target} PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")
+
+
 if (BUILD_PYTHON)
     add_subdirectory(python)
 endif ()
+
